app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-sample-app-deployment
  namespace: cloud-testing-env
  labels:
    app: k8s-sample-app
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-sample-app
  template:
    metadata:
      labels:
        app: k8s-sample-app
    spec:
      containers:
        - name: k8s-sample-app
          image: docker.io/pavelzagalsky/k8s-sample-app:1.8
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "16Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
