app/lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-sample-app
  name: k8s-sample-app-service
  namespace: cloud-testing-env
spec:
  selector:
    app: k8s-sample-app
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
