app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-sample-app-service
spec:
  selector:
    app: k8s-sample-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
